Fixed alignment for create account

--- a/public/css/form.css
+++ b/public/css/form.css
@@ -332,3 +332,9 @@ html {
   position: relative;
   margin-left: -450px;
 }
+
+.role-dropdown1 {
+  height: 2.188rem;
+  position: relative;
+}
+
